--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,110 @@
 :root {
+  --primary-color: #ffffff;
+  --accent-color: #2f303a;
   --primary-text-color: #757575;
   --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --accent-color2: #ffffff;
+  --accent-text-color: #2196f3;
+  --accent-text-color2: #ffffff;
+  --accent-button-color2: #2196f3;
 }
 body {
   color: var(--primary-text-color);
-  background-color: #f5f5f5;
+  background-color: #ffffff;
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.02em;
+  line-height: 1.7;
 }
 .list {
   list-style: none;
 }
-.logo {
-  text-decoration: none;
-}
+
 /*---------header------------*/
+.hero {
+  background-color: var(--accent-color);
+}
 .logo {
-  color: var(--accent-color);
+  color: var(--accent-text-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  text-decoration: none;
 }
 .logo span {
   color: var(--title-text-color);
 }
 .logo:hover,
 .logo:focus {
-  border-bottom: 2px solid #2196f3;
+  border-bottom: 2px solid var(--accent-text-color);
 }
 .stile-nav .link {
   color: var(--title-text-color);
+
+  font-weight: 500;
+  line-height: 1.14;
+  text-decoration: none;
 }
 .stile-nav .link:hover,
 .stile-nav .link:focus {
-  color: var(--accent-color);
+  color: var(--accent-text-color);
 }
 .stile-nav .link.current {
-  color: var(--accent-color);
+  color: var(--accent-text-color);
 }
 .contacts .link {
   color: var(--primary-text-color);
+
+  font-weight: 500;
+  line-height: 1.14;
+  text-decoration: none;
 }
 .contacts .link:hover,
 .contacts .link:focus {
-  color: var(--accent-color);
+  color: var(--accent-text-color);
 }
 /*------hero---------*/
 .hero-title {
-  color: var(--accent-color2);
+  color: var(--accent-text-color2);
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 .button {
-  color: var(--accent-color2);
-  background-color: var(--accent-color);
+  color: var(--accent-text-color2);
+  background-color: var(--accent-text-color);
   border: none;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+.button:hover,
+.button:focus {
+  background-color: var(--accent-button-color2);
 }
 /*------section---------*/
 .section-title {
   color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
 }
 /*-----feature----*/
 .feature-list .title {
   color: var(--title-text-color);
+
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 /*-----examples-----*/
 .work-list {
@@ -65,14 +112,25 @@ body {
 /*-----team-----*/
 .team-list .name {
   color: var(--title-text-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+}
+.team-list .profession {
+  font-size: 16px;
+  line-height: 1.2;
 }
 /*-----footer-----*/
+footer {
+  background-color: var(--accent-color);
+}
 .logo .acsent {
-  color: var(--accent-color2);
+  color: var(--accent-text-color2);
 }
 
 .footer-address .address {
-  color: var(--accent-color2);
+  color: var(--accent-text-color2);
   text-decoration: none;
   font-style: normal;
 }
