--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
   font-weight: 700;
   font-size: 26px;
   text-decoration: none;
+  line-height: 1.2;
 }
 .logo span {
   color: var(--title-text-color);
