--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
   font-family: Roboto, sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
-  line-height: 1.7;
 }
 .list {
   list-style: none;
@@ -97,7 +96,6 @@ body {
 .section-title {
   color: var(--title-text-color);
 
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
@@ -106,10 +104,13 @@ body {
 .feature-list .title {
   color: var(--title-text-color);
 
-  font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
 }
+.feature-list p {
+  line-height: 1.7;
+}
+
 /*-----examples-----*/
 .work-list {
 }
@@ -137,10 +138,12 @@ body {
   color: var(--accent-text-color2);
   text-decoration: none;
   font-style: normal;
+  line-height: 1.7;
 }
 .contacts .link {
   color: var(--primary-text-color);
   font-style: normal;
+  line-height: 1.7;
 }
 /*-----pjrtfolio-----*/
 
@@ -179,7 +182,6 @@ body {
   color: var(--primary-text-color);
 
   font-family: inherit;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
 }
